RESOLVED FIXED150047
bmalloc: Don't ASSERT that all syscalls succeed
https://bugs.webkit.org/show_bug.cgi?id=150047
Summary bmalloc: Don't ASSERT that all syscalls succeed
Geoffrey Garen
Reported 2015-10-12 13:57:19 PDT
bmalloc: Don't ASSERT that all syscalls succeed
Attachments
Patch (1.98 KB, patch)
2015-10-12 14:00 PDT, Geoffrey Garen
mark.lam: review+
Geoffrey Garen
Comment 1 2015-10-12 14:00:03 PDT
Mark Lam
Comment 2 2015-10-12 14:03:31 PDT
Comment on attachment 262920 [details] Patch r=me
Geoffrey Garen
Comment 3 2015-10-12 14:04:39 PDT
Note You need to log in before you can comment on or make changes to this bug.